# dup_finder

./: .gitignore  Makefile  README.md  settings.ini  setup.cfg
docs/: _config.yml  dup_finder.html  index.html  sidebar.json  utils.html
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
dup_finder/: _nbdev.py  dup_finder.py  prepare_test_data.py  utils.py
nbs/: 00_dup_finder.ipynb  01_utils.ipynb  index.ipynb
src/dup_finder/: core.py  helpers.py  version.py
tests/: __init__.py  test_prepare_data.py  test_testdata.py
