[metadata]
name = dup_finder
version = attr: dup_finder.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Find duplicate files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/dup_finder
license = apache2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dup_finder=dup_finder.app:dummy_func
pipx.run =
    dup_finder=dup_finder.app:dummy_func